@@ -1,30 +1,37 @@
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class Solution39 {
+    private int[] candidates;
+    private int target;
+    private LinkedList<Integer> combination;
+    private List<List<Integer>> combinationList;
+
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> ans = new ArrayList<>();
-        List<Integer> combine = new ArrayList<>();
-        dfs(candidates, target, ans, combine, 0);
-        return ans;
+        this.candidates = candidates;
+        this.target = target;
+        combination = new LinkedList<>();
+        combinationList = new ArrayList<>();
+
+        dfs(0, 0);
+        return combinationList;
     }
 
-    public void dfs(int[] candidates, int target, List<List<Integer>> ans, List<Integer> combine, int idx) {
-        if (idx == candidates.length) {
+    private void dfs(int i, int sum) {
+        if (sum == target) {
+            combinationList.add(new ArrayList<>(combination));
             return;
         }
-        if (target == 0) {
-            ans.add(new ArrayList<>(combine));
+        if (i == candidates.length || sum > target) {
             return;
         }
-        // 直接跳过
-        dfs(candidates, target, ans, combine, idx + 1);
-        // 选择当前数
-        if (target - candidates[idx] >= 0) {
-            combine.add(candidates[idx]);
-            dfs(candidates, target - candidates[idx], ans, combine, idx);
-            combine.remove(combine.size() - 1);
-        }
+        // 不选（当前）
+        dfs(i + 1, sum);
+        // 选（当前）
+        combination.add(candidates[i]);
+        dfs(i, sum + candidates[i]);
+        combination.removeLast();
     }
 }
 /*
